test-suite/tests/ui/states/invalid/redundant_delete.stderr
error: state is already deleted
 --> tests/ui/states/invalid/redundant_delete.rs:8:24
  |
8 |     #[stated(delete(A, A))]
  |                        ^
